--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id="react-root"></div>
+    <a href="/auth/twitter">Login</a>
+    <a href="/auth/logout">Logout</a>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
