create analysis form

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Datalytics</title>
     <link href="app.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body data-host="">
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
