route-parser implemented in FluxRoute

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Datalytics</title>
-    <link href="app.css" rel="stylesheet" type="text/css" />
+    <link href="/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body data-host="">
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
